--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.20.7"
+    "@babel/plugin-proposal-private-property-in-object": "^7.20.7",
+    "gh-pages": "^6.2.0"
   }
 }
